# RTIMULib2

Linux/RTIMULibDemo/: CMakeLists.txt  IMUThread.cpp
Linux/RTIMULibDemoGL/: CMakeLists.txt
Linux/RTIMULibGL/: CMakeLists.txt
RTIMULib/: CMakeLists.txt  RTFusion.cpp  RTFusionMadgwick.cpp  RTFusionMadgwick.h  RTFusionMahony.cpp  RTFusionMahony.h  RTIMULibDefs.h  RTIMUSettings.cpp  package.xml
RTIMULib/IMUDrivers/: RTIMU.cpp  RTIMUDefs.h  RTIMUHMC5883LADXL345.cpp  RTIMUHMC5883LADXL345.h
